Update README.md
added VM options