@@ -6,3 +6,7 @@
 
 ###Extra resources
 - FontAwesome solid font: fa-solid-900.ttf
+
+
+###VM options
+- --module-path "path\to\openjfx-13.0.1\javafx-sdk-13.0.1\lib" --add-modules javafx.controls,javafx.fxml
